H3CIPMSJAVA-20180830/src/objects/Parts__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <label>Commodity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escalate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Product</label>
        <referenceTo>General_Product__c</referenceTo>
        <relationshipName>PartsToGeneral_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoHS_Code__c</fullName>
        <label>RoHS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_BOM_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Support BOM ID</label>
        <type>Text</type>
    </fields>
    <label>Support BOM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>General_Product__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>General_Product__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>11/1/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/1/2017 12:00 AM</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Spare Part No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>